--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^3.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.18",
     "lucide-react": "^0.359.0",
     "next": "^14.1.4",
     "next-themes": "^0.3.0",
